Update README and example user-data

--- a/user-data.conf
+++ b/user-data.conf
@@ -1,15 +1,13 @@
 #cloud-config
 # vi: set ts=2 sts=2 sw=2 et ft=yaml :
 
-#runcmd:
-#  - 'sudo systemctl stop firewalld'
-#  - 'sudo systemctl disable firewalld'
-#  - 'sudo systemctl restart docker'
-#  - 'sudo groupadd -r nogroup'
-#  - 'sudo yum -y install unzip'
-#  - 'sudo yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo'
-#  - 'sudo yum install -y docker-ce docker-ce-cli containerd.io'
-#  - 'sudo systemctl enable docker'
-#  - 'sudo systemctl start docker'
-#  - 'sudo usermod --append -G docker centos'
-#  - 'sudo groupadd -r nogroup'
+runcmd:
+  - 'systemctl stop firewalld'
+  - 'systemctl disable firewalld'
+  - 'groupadd -r nogroup'
+  - 'yum -y install unzip'
+  - 'yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo'
+  - 'yum install -y docker-ce docker-ce-cli containerd.io'
+  - 'systemctl enable docker'
+  - 'systemctl start docker'
+  - 'usermod --append -G docker centos'
